# SINGER

./: .gitignore  Dockerfile  README.md  docker-compose.base.yml  docker-compose.yml  pyproject.toml
configs/course/: flightroom_lowres.yml
configs/experiment/: ssv_multi3dgs.yml
configs/method/: rrt.json  rrt_free_test.json
configs/perception/: perception_mode.yml
configs/rl_presets/: advantage_weighted_bc.json  full_dpg.json  mc_advantage_bc.json  mc_collision_clearance.json  mc_collision_only.json  mc_collision_only_test.json  mc_full.json  onset_weighted_bc.json  vanilla_bc_failures.json
configs/scenes/: flightroom_lowres.yml  flightroom_ssv_exp.yml  indooroutdoor.yml  packardpark.yml  spheres.yml  sv_917_3_left_gemsplat.yml
notebooks/: batch_flights.sh  simulating_trajectories.md  ssv_muilti3dgs_campaign_coruscant.py  ssv_multi3dgs_campaign.py
src/sousvide/control/policies/: BaseNetworks.py  ComponentNetworks.py  svnet.py
src/sousvide/flight/: deploy_ssv.py  vision_processor_base.py
src/sousvide/instruct/: train_policy_unified.py
src/sousvide/rl/: __init__.py  collision_detector.py  rl_helpers.py
src/sousvide/visualize/: analyze_simulated_experiments.py  plot_flight.py  plot_flight_ssv.py  visualize_simulated_experiments.py
